update the corousel responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
   height: 16px;
   background-color: #888;
   opacity: 0.5;
-
 }
 
 /* Active bullet customization for the slideshow*/
@@ -16,32 +15,22 @@
   opacity: 1;
 }
 
-/* Hide default Swiper buttons */
-/* .swiper .swiper-button-prev::after,
-.swiper .swiper-button-next::after {
-  display: none;
-} */
-
-/* Hide default navigation arrows */
-
-/* Custom styles for the "Prev" button */
 .swiper .swiper-button-prev::after {
-  background: url('/assets/img/icon/arrowLeftSlide.png') no-repeat center center;
+  background: url("/assets/img/icon/arrowLeftSlide.png") no-repeat center center;
   background-size: contain;
-  /* Ensure the icon fits properly */
-  width: 40px;
-  /* Set custom size */
-  height: 40px;
-  /* Adjust position (optional) */
+  position: absolute;
+  color: transparent;
+  width: 60px;
+  height: 60px;
+  font-weight: bolder;
 }
-
-/* Custom styles for the "Next" button */
 .swiper .swiper-button-next::after {
-  background: url('/assets/img/icon/arrowRightSlide.png') no-repeat center center;
+  background: url("/assets/img/icon/arrowRightSlide.png") no-repeat center
+    center;
+  position: absolute;
   background-size: contain;
-  /* Ensure the icon fits properly */
-  width: 40px;
-  /* Set custom size */
-  height: 40px;
-  /* Adjust position (optional) */
+  color: transparent;
+  width: 60px;
+  height: 60px;
+  font-weight: bolder;
 }
